# MMHA

./: .env  check_deps.py  extract_keys.py  inspect_checkpoint.py  inspect_clinical.py  inspect_ecg.py  inspect_ecg_keys.py  list_keys.py  list_keys_file.py  main.py  model_keys.txt  model_structure.txt  pyproject.toml  requirements.txt  test_api_live.py  verify_clinical.py  verify_ecg_new.py  verify_eeg_ui.py  verify_fusion.py
model/: Clinical.pth  simple_ann_model.pth
static/: index.html  script.js  style.css
utils/: clinical_utils.py  gemini_utils.py  model_loader.py
